crates/iota-core/src/unit_tests/snapshots/iota_core__authority__authority_tests__clever_abort_with_code_abort_error.snap
---
source: crates/iota-core/src/unit_tests/authority_tests.rs
expression: abort_error.unwrap()
---
Module ID: 0x0000000000000000000000000000000000000000000000000000000000000000::aborts
Function: abort_with_code
Error code: 5
