crates/iota-core/src/unit_tests/snapshots/iota_core__authority__authority_tests__clever_abort_with_const_and_code_abort_error.snap
---
source: crates/iota-core/src/unit_tests/authority_tests.rs
expression: abort_error.unwrap()
---
Module ID: 0x0000000000000000000000000000000000000000000000000000000000000000::aborts
Function: abort_with_const_and_code
Line: 23
Error code: 5
