crates/iota-core/src/unit_tests/snapshots/iota_core__authority__authority_tests__dry_run_dev_inspect_dynamic_field_too_new-2.snap
---
source: crates/iota-core/src/unit_tests/authority_tests.rs
expression: abort_error.unwrap()
---
Module ID: 0x0000000000000000000000000000000000000000000000000000000000000002::dynamic_field
Function: remove_child_object
Error code: 1
